--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@ layout: page
 title: Tags
 ---
 <section class="list">
-    <h1 class="title">Tags</h1>
+    <h2 class="title">Categories</h2>
 
     {% assign tags_list = site.tags %}
 
