--- a/tags.html
+++ b/tags.html
@@ -24,11 +24,11 @@ title: Tags
 
 <section class="tag-list">
     {% for tag in site.tags  %}
-    <h2 class="title" id="{{ tag[0] | slugify }}">#{{ tag[0] }}</h2>
+    <h2 class="title" id="{{ tag[0] | slugify }}">{{ tag[0] }}</h2>
 
     <ul class="list">
         {% assign pages_list = tag[1] %}
-        {% for post in pages_list reversed %}
+        {% for post in pages_list %}
             {% if post.title != null %}
                 {% if group == null or group == post.group %}
                     <li class="item">
